add api user, role, module, action